Bug 428759 - Horzontal scroll only moves one pixel at a time.
Summary: Horzontal scroll only moves one pixel at a time.
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.8.x
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-06 14:49 UTC by michael
Modified: 2022-03-23 18:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.9.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description michael 2020-11-06 14:49:06 UTC
SUMMARY
When scrolling horizontal using keyboard Kdiff3 scrolls view by one pixel, which is next to useless.  
It should scroll by multiple characters, i propose 8 or maybe percent of screen - 10-20% of screen?

How to reproduce:
1. Open any diff.
2. Use cursors left/right to scroll.
3. It takes forever to scroll long lines to right...

System:
Windows 10, x64, Kdiff 1.8.3 (from https://download.kde.org/stable/kdiff3/kdiff3-1.8.3-windows-64.exe)
Comment 1 michael 2022-03-23 18:10:23 UTC
Git commit 6087070c9b5fd11f9dee97e219771b6dd9dc6646 by Michael Reeves.
Committed on 23/03/2022 at 17:06.
Pushed by mreeves into branch 'master'.

Correctly handle horizontal scroll

Adjust singleStep to prevent pixel by pixel scrolling.
FIXED-IN:1.9.6

M  +1    -0    src/pdiff.cpp

https://invent.kde.org/sdk/kdiff3/commit/6087070c9b5fd11f9dee97e219771b6dd9dc6646
Comment 2 michael 2022-03-23 18:12:22 UTC
Git commit 64487c6904d67d9e0f57da8bdcd83bf4f81a20af by Michael Reeves.
Committed on 23/03/2022 at 18:11.
Pushed by mreeves into branch '1.9'.

Correctly handle horizontal scroll

Adjust singleStep to prevent pixel by pixel scrolling.
FIXED-IN:1.9.6
(cherry picked from commit 6087070c9b5fd11f9dee97e219771b6dd9dc6646)

M  +1    -0    src/pdiff.cpp

https://invent.kde.org/sdk/kdiff3/commit/64487c6904d67d9e0f57da8bdcd83bf4f81a20af