Correctly handle horizontal scroll

Adjust singleStep to prevent pixel by pixel scrolling.

BUG:428759
FIXED-IN:1.9.6